migrate to new buildscript

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,31 @@
-.classpath
 .gradle
-.metadata
-.project
 .settings
-CREDITS-fml.txt
-LICENSE-fml.txt
-MinecraftForge-Credits.txt
-MinecraftForge-License.txt
-forge-*-changelog.txt
-libs/*
-build/*
-!libs/.gitkeep
-bin/
-# default eclipse stuff
-eclipse/*
-!eclipse/.metadata/.plugins/org.eclipse.debug.core/.launches/Client.launch
-!eclipse/.metadata/.plugins/org.eclipse.debug.core/.launches/Server.launch
+/.idea/
+/run/
+/build/
+/eclipse/
+.classpath
+.project
+/bin/
+/config/
+/crash-reports/
+/logs/
+options.txt
+/saves/
+usernamecache.json
+banned-ips.json
+banned-players.json
+eula.txt
+ops.json
+server.properties
+servers.dat
+usercache.json
+whitelist.json
+/out/
+*.iml
+*.ipr
+*.iws
+src/main/resources/mixins.*.json
+*.bat
+*.DS_Store
+!gradlew.bat
