--- a/repositories.gradle
+++ b/repositories.gradle
@@ -14,6 +14,9 @@ repositories {
     }
     maven {
         url 'https://cursemaven.com'
+        content {
+            includeGroup 'curse.maven'
+        }
     }
     maven {
         url 'https://jitpack.io'
