--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 modName = Amun-Ra
 
 # This is a case-sensitive string to identify your mod. Convention is to use lower case.
-modId = amunra
+modId = GalacticraftAmunRa
 
 modGroup = de.katzenpapst.amunra
 
@@ -124,7 +124,7 @@ curseForgeRelations =
 
 # Optional parameter to customize the produced artifacts. Use this to preserver artifact naming when migrating older
 # projects. New projects should not use this parameter.
-# customArchiveBaseName =
+customArchiveBaseName = AmunRa-GC
 
 # Optional parameter to prevent the source code from being published
 # noPublishedSources =
